  more than the half of kept entries...
- adding kdf support for repairing operation instead of using the values of the
  archive/backup under reparation.
- fixing bug in thread_cancellation class that led a cancelled thread kept
  being recorded as cancelled forever, leading libdar to abort immediately when
  run in a new thread having the the same tid.

from 2.7.14 to 2.7.15
- updating libdar about CURLINFO_CONTENT_LENGTH_DOWNLOAD symbol which is
  reported as deprecated by recent libcurl libraries.
- fixed compilation problem under MacOS Mojave
- fixed bug that lead the warning about a backup operation about to save
  itself, to not show
- removing obsolete call to gcry_control(GCRYCTL_ENABLE_M_GUARD) while
  initializing libgcrypt. This led to libgcrypt initialization to fail
  with libgcrypt 1.11 and more recent versions.
- fixed listing but about "present but unsaved" FSA status
- fixed dead-lock condition in libdar when used with libcurl > 0.74.0 at
  the end of closing sftp session (undocumented changed behavior in
  libcurl).

from 2.7.13 to 2.7.14
- adding safe guard in fichier_libcurl destructor to verify all data have
  been passed to libcurl *and* libcurl has completed the writing operation
  before destroying a fichier_libcurl object.
- adding support for thread cancellation when interacting with libcurl
- updating man page
- fixing some error in the code documentation
- updated FAQ

from 2.7.12 to 2.7.13
- fixing bug auto-reported in "slice_layout.cpp line 48" concerning isolated
  catalogs triggered when dar/libdar has been compiled with some version
  gcc (gcc >= 11) with optimizations set.
- fixing the configure script to not fail if libargon2 is not present unless
  explicitly asked by --enable-libargon2-linking
- added support for cppcheck to reinforce code robustness and sanity
- updating documentation about slice_layout structure and usage in libdar

from 2.7.11 to 2.7.12